--- a/test/render.yaml
+++ b/test/render.yaml
@@ -3,7 +3,7 @@ services:
   name: line-bot
   env: python
   repo: https://github.com/KoHsuanNa/LineTest/test
-  buildCommand: pip install gunicorn -r requirements.txt
+  buildCommand: pip install -r requirements.txt
   startCommand: gunicorn app:app
   plan: free
   autoDeploy: false
